# omgbot

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  README.txt  build.rs
.github/workflows/: actions.yml  rust.yml
src/: bvb.rs  main.rs
