[package]
name = "omgbot"
version = "0.1.0"
authors = ["Andy Kurnia"]
edition = "2024"
default-run = "omgbot"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
async-nats = "0.39.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
prost = "0.13.5"
rand = "0.9.0"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
tokio = { version = "1.44.1", features = ["full"] }
wolges = { path = "wolges" }

[build-dependencies]
prost-build = "0.13.5"

[[bin]]
name = "omgbot"
path = "src/main.rs"

[[bin]]
name = "bvb"
path = "src/bvb.rs"
