[package]
name = "omgbot"
version = "0.1.0"
authors = ["Andy Kurnia"]
edition = "2024"
default-run = "omgbot"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
async-nats = "0.42.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
prost = "0.14.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
tokio = { version = "1.47.1", features = ["full"] }
wolges = { path = "wolges" }

[build-dependencies]
prost-build = "0.14.1"

[[bin]]
name = "omgbot"
path = "src/main.rs"

[[bin]]
name = "bvb"
path = "src/bvb.rs"
