[package]
name = "omgbot"
version = "0.1.0"
authors = ["Andy Kurnia"]
edition = "2024"
default-run = "omgbot"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
async-nats = "0.46.0"
env_logger = "0.11.9"
futures-util = "0.3.32"
log = "0.4.29"
prost = "0.14.3"
rand = { version = "0.10.0", features = ["chacha"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
tokio = { version = "1.50.0", features = ["full"] }
wolges = { path = "wolges" }

[build-dependencies]
prost-build = "0.14.3"

[[bin]]
name = "omgbot"
path = "src/main.rs"

[[bin]]
name = "bvb"
path = "src/bvb.rs"
